--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,11 +39,12 @@
 }
 
 .pokemon-img {
-  max-width: 70%;
-  max-height: 70%;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 .fusion-overlay {
+  top: 2rem;
   width: 30rem;
   height: 25rem;
 }
@@ -54,29 +55,52 @@
   display: flex;
 }
 
-.gradient {
-  height: fit-content;
-  z-index: 3;
-  width: 100%;
-  max-width: 640px;
-  background-image: radial-gradient(
-      at 27% 37%,
-      hsla(215, 98%, 61%, 1) 0px,
-      transparent 0%
-    ),
-    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
-    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
-    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
-    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
-    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
-    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.timer {
   position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  filter: blur(100px) saturate(150%);
-  top: 80px;
-  opacity: 0.15;
+  top: 100px;
+  left: 10px;
+}
+
+.clue {
+  top: 100px;
+  font-size: 20px;
+}
+
+.image-container {
+  max-width: 300px; /* Adjust as needed */
+  margin-top: 20px;
+}
+
+.guess-form {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.guess-input {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.submit-button {
+  padding: 8px 16px;
+  background-color: #0070f3; /* Example color, change as needed */
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.black-pokemon-img {
+  max-width: 80%;
+  max-height: 80%;
+  filter: grayscale(100%) brightness(0%) contrast(100%);
 }
 
 @media screen and (max-width: 640px) {
