--- a/styles/globals.css
+++ b/styles/globals.css
@@ -190,6 +190,71 @@ body {
 
 /* Tailwind Styles */
 
+/* leaderboard style */
+.container-leaderboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 6rem;
+}
+
+.heading {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
+.card {
+  width: 45%;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.card-heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.list-item {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+}
+
+/* dropdown for games */
+@keyframes dropdownAnimation {
+  from {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* dropdown style  */
+.dropdown-menu {
+  opacity: 0;
+  transform: translateY(-10px);
+  animation: dropdownAnimation 0.6s forwards;
+  width: max-content;
+  overflow: auto;
+}
+
+/* profile modal */
+.profile-modal {
+  opacity: 0;
+  transform: translateY(-10px);
+  animation: dropdownAnimation 0.6s forwards;
+  width: max-content;
+  overflow: auto;
+}
+
 .app {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
