--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,12 +14,12 @@ body {
 }
 
 .main {
-  background-image: url('/assets/images/box.jpg');
-  background-size: contain;
+  background-image: url('/assets/images/background.jpeg');
+  background-size: cover;
   background-position: center;
   height: 100vh;
   width: 100vw;
-  background-repeat: repeat-x;
+  background-repeat: no-repeat;
 }
 
 .main-2 {
